--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <style>
-  body {font-family: 'Itim', cursive;}
+  body {font-family: 'Itim', sans-serif;}
 </style>
 <body>
   <div id="app"></div>
