--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 </head>
 <style>
-  body {font-family: 'Itim', sans-serif;}
+  body {
+    font-family: 'Itim', sans-serif;
+    background-color: #548EDB;
+  }
 </style>
 <body>
   <div id="app"></div>
