--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
 </head>
 <style>
   body {
-    font-family: 'Itim', sans-serif;
+    /* font-family: 'Itim', sans-serif; */
+    font-family: 'Noto Sans KR', sans-serif;
     background-color: #548EDB;
   }
 </style>
