--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   body {
     /* font-family: 'Itim', sans-serif; */
     font-family: 'Noto Sans KR', sans-serif;
-    background-color: #548EDB;
+    background-color: #fff;
   }
 </style>
 <body>
